goit-markup-hw-07

--- a/portfolio.html
+++ b/portfolio.html
@@ -208,7 +208,7 @@
 
 <footer>
 
-    <div class="flex container">
+    <div class="flex1 container">
 
     <div class="web">
 
@@ -221,7 +221,7 @@
 
         <p class="footer1">Social media</p>
 
-        <ul class="style ">
+        <ul class="style footer-social">
 
      <li class="footer2 list">
      <a class="hover-focus2 link" href="https://www.instagram.com/" >
@@ -259,7 +259,7 @@
 
     <form class="footer-subscribe">
 
-        <input name="email" type="email" class="form-button-subscribe" placeholder="E-mail" required/>
+        <input name="email" type="email" class="form-button-subscribe" placeholder="E-mail" required>
 
     <button class="form-button-1" type="submit">Subscribe
         <svg class="icons-subscribe">
