--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
         <ul class="contact-nav contact  list">
             <li class="contact list"><a class=" contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contact list"><a class=" contact link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li class="contact list contact-planschet"><a class=" contact link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
 
     <button type="button" class="mobile-menu-open js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
@@ -56,7 +56,7 @@
         <li class="menu-mobile-form list"><a href="#" class="menu-mobile-form link">Contacts</a></li>
         </ul>
 
-    
+    <div class="contact-nav-dinamic">
       <ul class="contact-nav-mobile list">
         <li class="contact-mobile list"><a class="contact-mobile link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         <li class="contact-mobile list"><a class="contact-mobile-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -94,6 +94,7 @@
 </a>
 </li>
     </ul>
+</div>
 
 </div>
 
